--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite dev",
-    "build": "svelte-kit build"
+    "build": "svelte-kit build",
     "preview": "svelte-kit preview"
   },
   "type": "module",
   "dependencies": {
     "gun": "^0.2020.1237",
     "@sveltejs/adapter-static": "^1.0.0",
-    "@sveltejs/kit": "latest",
-    "svelte": "^3.59.1",
-    "@sveltejs/kit": "next"
+    "@sveltejs/kit": "next",
+    "svelte": "^3.59.1"
   },
   "devDependencies": {
     "vite": "^4.0.0"
   }
 }
+
